* Solved a major Bal_Doctrine_Core design issue with Items * Working on solving a major issue with fetching and identifiers

--- a/lib/models/Schema/Invoice.yaml
+++ b/lib/models/Schema/Invoice.yaml
@@ -220,6 +220,11 @@ Bal_Invoice:
             primary: true
             unsigned: true
             autoincrement: true
+        code:
+            type: string(30)
+            unsigned: true
+            notblank: true
+            unique: true
         title:
             type: string(50)
             notblank: true
