--- a/lib/models/Schema/Message.yaml
+++ b/lib/models/Schema/Message.yaml
@@ -50,7 +50,7 @@ Bal_Message:
             default: "user_message"
             extra:
                 auto: true
-        MessageTo_id:
+        MessageParent_id:
             type: integer(3)
             unsigned: true
         UserFor_id:
@@ -60,12 +60,13 @@ Bal_Message:
             type: integer(2)
             unsigned: true
     relations:
-        MessageTo:
+        MessageParent:
+            # Which Message is this Message for?
             class: Message
-            local: MessageTo_id
+            local: MessageParent_id
             foreign: id
-            foreignAlias: MessagesFrom
-            onDelete: "CASCADE" # If MessageTo is deleted, cascade
+            foreignAlias: MessagesChild
+            onDelete: "CASCADE" # If MessageParent is deleted, cascade
         UserFor:
             class: User
             local: UserFor_id
